@@ -2,6 +2,7 @@
 
 	* Added feature #13116: htmlArea RTE: Allow to hide counting classes
 	* Fixed bug #13674: htmlArea RTE: Incorrect position of cursor after SHIFT-ENTER in WebKit browser
+	* Follow-up to bug #14066: htmlArea RTE: Erratic handling of oncut and onpaste events
 
 2010-04-11  Stanislas Rolland  <typo3@sjbr.ca>
 
